# app/Http/Resources/FlashCardResource.php
@@ -1,0 +1,38 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="FlashCardResource",
+ *     title="FlashCardResource",
+ *     @OA\Property(property="id", type="integer", default="1"),
+ *     @OA\Property(property="title", type="string", default="Title"),
+ *     @OA\Property(property="fornt", type="string", default="front content"),
+ *     @OA\Property(property="back", type="string", default="back content"),
+ *     @OA\Property(property="published", ref="#/components/schemas/BooleanEnum"),
+ *     @OA\Property(property="updated_at", type="string", default="2024-08-19T07:26:07.000000Z"),
+ *     @OA\Property(property="created_at", type="string", default="2024-08-19T07:26:07.000000Z"),
+ * )
+ */
+class FlashCardResource extends JsonResource
+{
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'front' => $this->front,
+            'back' => $this->back,
+            'favorite' => $this->favorite->toArray(),
+            'updated_at' => $this->updated_at,
+            'created_at' => $this->created_at,
+        ];
+    }
+}
